tests/snapshots/tui_snapshot_test__tui_snapshots__filter_dialog_popup.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Current Mod┌ Filter ──────────────────────────────────────────────┐
 Match Expre│                                                      │
 Display Fil│  SIP From:    [                                   ]  │
# ▲   Method│  SIP To:      [                                   ]  │   Duratio
            │  Source:      [                                   ]  │
  No SIP dia│  Destination: [                                   ]  │
            │  Payload:     [                                   ]  │
  Waiting fo│  Header:      [                                   ]  │
  Press 'q' │  After:       [                                   ]  │
            │  Before:      [                                   ]  │
            │  ──────────────────────────────────────────────────  │
            │  All       [*]                                       │
            │  REGISTER  [*]             OPTIONS   [*]             │
            │  INVITE    [*]             PUBLISH   [*]             │
            │  SUBSCRIBE [*]             MESSAGE   [*]             │
            │  NOTIFY    [*]             REFER     [*]             │
            │  INFO      [*]             UPDATE    [*]             │
            │                                                      │
            │     [ Filter ]                 [ Cancel ]            │
            │                                                      │
            │  Tab move · Enter apply · Esc cancel                 │
            │                                                      │
            └──────────────────────────────────────────────────────┘
Tab Next  Space Toggle  Enter Apply  Esc Cancel  F9 Clear
