tests/snapshots/tui_snapshot_test__tui_snapshots__filter_dialog_view.snap
---
source: tests/tui_snapshot_test.rs
assertion_line: 431
expression: output
---
┌ Filter Expression (F7) ──────────────────────────────────────────────────────┐
│Enter filter expression (e.g., method == 'INVITE', state == 'Failed')         │
│                                                                              │
│Press Enter to apply, Esc to cancel                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 sipnab | Filter | Dialogs: 0 (active: 0) | Streams: 0 | F1:Help q:Quit
