tests/snapshots/tui_snapshot_test__tui_snapshots__help_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Current Mode: Online (any)    Dialogs: 0 (0 displayed)  [A]
 Match Expression:     BPF Filter:
 Display Filter:
┌ Help (↑/↓ scroll, Esc to close) ─────────────────────────────────────────────┐
│sipnab — Keyboard Shortcuts                                                   │
│v0.0.0-test                                                                   │
│libpcap version 0.0.0-test; alternate capture backends named: none            │
│                                                                              │
│CALL LIST:                                                                    │
│  ↑/↓, j/k          Navigate dialogs                                          │
│  PgUp/PgDn         Page scroll                                               │
│  Home/End          Jump to first/last                                        │
│  Enter             Open call flow                                            │
│  Space             Select/deselect dialog                                    │
│  Esc, q            Quit (asks first; Ctrl-C quits at once)                   │
│  < / >             Change sort column                                        │
│  Z                 Reverse sort direction                                    │
│  A                 Toggle autoscroll                                         │
│  p                 Pause/resume capture                                      │
│  /                 Search (arrows/Space work while typing; Enter opens)      │
│  i                 Clear non-matching dialogs                                │
│  I                 Clear matching dialogs                                    │
│  F1, ?             This help (? works in every view)                         │
│  F2                Save capture (Tab cycles PCAP/TXT/JSON/WAV/Mermaid/...)   │
│  F3                Search (same as /)                                        │
│  F5, Ctrl+L        Clear calls                                               │
│  r, F6             Show raw SIP message                                      │
│  F7                Filter dialog                                             │
│  F8                Settings                                                  │
│  t                 Cycle timestamps (absolute / delta-prev / delta-first /   │
│scaled)                                                                       │
│  u                 Cycle From/To (default/host:port/user/user@host:port)     │
│  n                 Cycle name resolution (off/static/DNS) — global           │
│  N                 Name selected address (IP -> host / FQDN)                 │
│  O                 Open pcap file                                            │
│  s                 Statistics view                                           │
│  g                 Top talkers (busiest participants, by source IP)          │
│  m                 Carrier metrics (ASR/NER/ACD by destination IP)           │
└──────────────────────────────────────────────────────────────────────────────┘
Esc Back
