tests/snapshots/tui_snapshot_test__tui_snapshots__loss_map_clustered.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 0 shown of 0    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ Packet loss map ─────────────────────────────────────────────────────────────────────────────────┐
│  SSRC 0xAAAABBBB   10.0.0.1:20000 → 10.0.0.2:30000                                               │
│  Loss 70.92%   100 lost / 141 packets                                                            │
│  Bursts 1   Pattern Bursty   Avg burst 2000ms                                                    │
│                                                                                                  │
│             ▒▒█▒▒█▒█▒█▒▒█▒█▒█▒█▒▒█▒█▒█▒▒█▒█▒█▒█▒▒█▒█▒█▒█▒▒█▒█▒█▒▒█▒█▒█▒█▒▒█▒█▒█▒▒█               │
│1000                                           1070                                           1140│
│                                                                                                  │
│  Density · clean  ░▒ light  ▓█ heavy   (left = oldest, right = newest sequence)                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help
