tests/snapshots/tui_snapshot_test__tui_snapshots__loss_map_no_loss.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 0 shown of 0    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ Packet loss map ─────────────────────────────────────────────────────────────────────────────────┐
│  SSRC 0xAAAABBBB   10.0.0.1:20000 → 10.0.0.2:30000                                               │
│  Loss 0.00%   0 lost / 39 packets                                                                │
│  Bursts  none                                                                                    │
│                                                                                                  │
│                          No packet loss recorded in the retained window                          │
│                                                                                                  │
│  Density · clean  ░▒ light  ▓█ heavy   (left = oldest, right = newest sequence)                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help
