tests/snapshots/tui_snapshot_test__tui_snapshots__message_diff_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 Selected: message 1 (press Space on another to diff)
┌ Message 1 ─────────────────────────────────────┐┌ Message 2 ─────────────────────────────────────┐
│ Message 1                                      ││ Message 2                                      │
│INVITE sip:1002@example.com SIP/2.0             ││                                                │
│From: "1001" <sip:1001@example.com>;tag=t1      ││                                                │
│To: "1002" <sip:1002@example.com>               ││                                                │
│                                                ││SIP/2.0 180 Ringing                             │
│                                                ││From: "Alice" <sip:1001@example.com>;tag=t1     │
│                                                ││To: "Bob" <sip:1002@example.com>;tag=t2         │
│Call-ID: call-1@test                            ││Call-ID: call-1@test                            │
│CSeq: 1 INVITE                                  ││CSeq: 1 INVITE                                  │
│Content-Length: 0                               ││Content-Length: 0                               │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
│                                                ││                                                │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Scroll
