tests/snapshots/tui_snapshot_test__tui_snapshots__narrow_terminal_layout.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: o
 Capture filter (BPF): none
 View filter: none
  # ▲    Method    State      Msgs +Prev    PDD    Duratio
> [ ] 1  INVITE    Completed  4    +0.000s  1000ms 1m2s
  [ ] 2  INVITE    FAILED ⚠   2    +5.000s         1.0s
  [ ] 3  INVITE    InCall     2    +5.000s         2.0s







Esc Quit  F1 Help  Enter Open call  Tab Streams  F7 Filter
