tests/snapshots/tui_snapshot_test__tui_snapshots__quality_dashboard_no_streams.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ Quality dashboard ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                │
│  Streams: 0 (0 active)   No RTP streams yet   With loss: 0                                                                     │
│                                                                                                                                │
│    MOS   Rating   Jitter   Loss%   Packets  Codec    Stream                                                                    │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Select  Enter Detail  L Loss map
