tests/snapshots/tui_snapshot_test__tui_snapshots__quality_dashboard_with_streams.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 0 shown of 0    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ Quality dashboard ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                │
│  Streams: 2 (0 active)   Avg MOS: 4.4   Worst: 4.4   With loss: 0                                                              │
│                                                                                                                                │
│    MOS   Rating   Jitter   Loss%   Packets  Codec    Stream                                                                    │
│▶ · 4.4   Good      0.0ms   0.00         1  PCMU     call-1@test                                                                │
│  · 4.4   Good      0.0ms   0.00         1  PCMA     10.0.0.3:20002 → 10.0.0.4:30002                                            │
│                                                                                                                                │
│  Trend (selected, 5s intervals, oldest → newest)                                                                               │
│  MOS:    (no completed intervals yet)                                                                                          │
│  Jitter: (no completed intervals yet)                                                                                          │
│  Loss:   (no completed intervals yet)                                                                                          │
│  Legend: MOS 1–5  Jitter ms  Loss %   █ Good  █ Fair/Poor  █ Bad   ● active  · idle                                            │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
│                                                                                                                                │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Select  Enter Detail  L Loss map
