tests/snapshots/tui_snapshot_test__tui_snapshots__raw_message_view.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
┌ Raw SIP Message [1/4] (Esc: Back | /: Search) ─────────────────────────────────────────┐
│12:00:00.000 10.0.0.1:5060 -> 10.0.0.2:5060 [UDP]                                       │
│                                                                                        │
│INVITE sip:1002@example.com SIP/2.0                                                     │
│From: "1001" <sip:1001@example.com>;tag=t1                                              │
│To: "1002" <sip:1002@example.com>                                                       │
│Call-ID: call-1@test                                                                    │
│CSeq: 1 INVITE                                                                          │
│Content-Length: 0                                                                       │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
Esc Back  F1 Help  s Highlight  c Color  / Search  y Copy  F2 Save
